# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp  utils.c  utils.h
graphics/: model.cpp  model.h  render.c  render.cpp  render.h  shader.c  shader.cpp  shader.h
math/: math.c  math.h
shaders/: vert_shader.glsl
utils/: logger.c  logger.cpp  logger.h  render.c  render.h  shader.c  shader.h  text.c  text.cpp  text.h  utils.c  utils.cpp  utils.h
